Springboot 4 / springbatch 6 migration