@@ -1,23 +1,20 @@
 package fr.training.springbatch.job.dynamic;
 
-import java.io.File;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.batch.core.Job;
-import org.springframework.batch.core.Step;
+import fr.training.springbatch.app.dto.Customer;
+import fr.training.springbatch.app.job.AbstractJobConfiguration;
+import org.springframework.batch.core.job.Job;
 import org.springframework.batch.core.job.builder.FlowBuilder;
 import org.springframework.batch.core.job.builder.JobBuilder;
 import org.springframework.batch.core.job.flow.Flow;
 import org.springframework.batch.core.job.flow.support.SimpleFlow;
 import org.springframework.batch.core.repository.JobRepository;
+import org.springframework.batch.core.step.Step;
 import org.springframework.batch.core.step.builder.StepBuilder;
-import org.springframework.batch.item.ItemReader;
-import org.springframework.batch.item.ItemWriter;
-import org.springframework.batch.item.file.builder.FlatFileItemReaderBuilder;
-import org.springframework.batch.item.file.builder.FlatFileItemWriterBuilder;
-import org.springframework.batch.item.file.mapping.BeanWrapperFieldSetMapper;
+import org.springframework.batch.infrastructure.item.ItemReader;
+import org.springframework.batch.infrastructure.item.ItemWriter;
+import org.springframework.batch.infrastructure.item.file.builder.FlatFileItemReaderBuilder;
+import org.springframework.batch.infrastructure.item.file.builder.FlatFileItemWriterBuilder;
+import org.springframework.batch.infrastructure.item.file.mapping.BeanWrapperFieldSetMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
@@ -27,8 +24,10 @@ import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.task.SimpleAsyncTaskExecutor;
 import org.springframework.transaction.PlatformTransactionManager;
 
-import fr.training.springbatch.app.dto.Customer;
-import fr.training.springbatch.app.job.AbstractJobConfiguration;
+import java.io.File;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 @ConditionalOnProperty(name = "spring.batch.job.names", havingValue = DynamicParallelJobConfig.DYNAMIC_PARALLEL_JOB)
@@ -69,7 +68,7 @@ public class DynamicParallelJobConfig extends AbstractJobConfiguration {
                 new FlowBuilder<Flow>("flow_" + step.getName()) //
                         .start(step) //
                         .build()) //
-                .collect(Collectors.toList());
+                .toList();
 
         return new FlowBuilder<SimpleFlow>("parallelStepsFlow") //
                 .split(taskExecutor) //
@@ -81,9 +80,11 @@ public class DynamicParallelJobConfig extends AbstractJobConfiguration {
     private Step createStep(final String filename) {
 
         return new StepBuilder("step-for-" + filename, jobRepository) // !!! Stepname has to be unique
-                .<Customer, Customer> chunk(chunkSize, transactionManager)
+                .<Customer, Customer> chunk(chunkSize)
+                .transactionManager(transactionManager)
                 .reader(fileReader(new FileSystemResource(new File("src/main/resources/csv/big/" + filename))))
-                .writer(fileWriter(new FileSystemResource("target/output/big/" + filename))).build();
+                .writer(fileWriter(new FileSystemResource("target/output/big/" + filename)))
+                .build();
     }
 
     private ItemReader<Customer> fileReader(final FileSystemResource fileSystemResource) {
