@@ -1,14 +1,14 @@
 package fr.training.springbatch.tools.tasklet;
 
-import static org.springframework.util.Assert.notNull;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.batch.core.StepContribution;
 import org.springframework.batch.core.scope.context.ChunkContext;
+import org.springframework.batch.core.step.StepContribution;
 import org.springframework.batch.core.step.tasklet.Tasklet;
-import org.springframework.batch.repeat.RepeatStatus;
+import org.springframework.batch.infrastructure.repeat.RepeatStatus;
 import org.springframework.jdbc.core.JdbcTemplate;
+
+import static org.springframework.util.Assert.notNull;
 
 /**
  * This {@link Tasklet} execute PostgreSQL's ANALYSE command upon a given Tables names and a given schema.
@@ -30,7 +30,7 @@ public class AnalyzePGTasklet implements Tasklet {
         notNull(tableNames, "A list names is required");
 
         for (final String tableName : tableNames) {
-            final String sql = String.format("ANALYSE %s.%s;", schema, tableName);
+            final String sql = "ANALYSE %s.%s;".formatted(schema, tableName);
             log.debug("Executing {}", sql);
 
             jdbcTemplate.execute(sql);
