@@ -1,8 +1,8 @@
 package fr.training.springbatch.tools.writer;
 
-import org.springframework.batch.item.Chunk;
-import org.springframework.batch.item.ItemWriter;
-import org.springframework.lang.NonNull;
+import org.jspecify.annotations.NonNull;
+import org.springframework.batch.infrastructure.item.Chunk;
+import org.springframework.batch.infrastructure.item.ItemWriter;
 
 public class ConsoleItemWriter<T> implements ItemWriter<T> {
 
@@ -19,7 +19,7 @@ public class ConsoleItemWriter<T> implements ItemWriter<T> {
     @Override
     public void write(final @NonNull Chunk<? extends T> items) throws Exception {
         for (final T item : items) {
-            System.out.println(String.format("%s%s", message, item.toString()));
+            System.out.println("%s%s".formatted(message, item.toString()));
         }
     }
 }
